refactory, tutti i metodi ritorano Resource adesso
