# docs/openapi/api-internal-v1.yaml
@@ -212,9 +212,10 @@ paths:
         '200':
           description: The operation has been successfully completed
           content:
-            application/json:
+            'application/octect-stream':
               schema:
-                $ref: '#/components/schemas/BaseResponseDto'
+                type: string
+                format: binary
         '400':
           description: Errors during the request validation
           content:
@@ -261,9 +262,10 @@ paths:
         '200':
           description: The operation has been successfully completed
           content:
-            application/json:
+            'application/octect-stream':
               schema:
-                $ref: '#/components/schemas/BaseResponseDto'
+                type: string
+                format: binary
         '400':
           description: Errors during the request validation
           content:
@@ -310,9 +312,10 @@ paths:
           description: >-
             The operation has been successfully completed
           content:
-            application/json:
+            'application/octect-stream':
               schema:
-                $ref: '#/components/schemas/BaseResponseDto'
+                type: string
+                format: binary
         '400':
           description: Errors during the request validation
           content:
@@ -359,9 +362,10 @@ paths:
           description: >-
             The operation has been successfully completed
           content:
-            application/json:
+            'application/octect-stream':
               schema:
-                $ref: '#/components/schemas/BaseResponseDto'
+                type: string
+                format: binary
         '400':
           description: Errors during the request validation
           content:
